--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2614,17 +2614,17 @@
 
 .text_anim h2 span,
 .text_anim h3 span {
-    transform: translateY(200%) skewY(0deg);
+    transform: translateY(400%) skewY(1deg);
 }
 
 .text_anim span {
     display: inline-block;
-    transform: translateY(300%) skewY(0deg);
+    transform: translateY(400%) skewY(1deg);
 }
 
 .is-inview .text_anim span {
     transform: translateY(0) skewY(0deg);
-    transition: transform .8s ease-out;
+    transition: transform 1s ease-out;
     transition-delay: .4s;
 }
 
