--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -980,7 +980,17 @@
 .mob {
     display: none;
 }
-
+@media screen and (max-width:1440px){
+    .lets .flex-row P {
+        text-align: right;
+        font-size: 2em;
+        text-transform: uppercase;
+        padding-left: 45%;
+        letter-spacing: 2px;
+    }
+    
+    
+}
 @media screen and (max-width:767px) {
     .mob {
         display: none;
