--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -681,6 +681,7 @@
     letter-spacing: 3px;
     text-align: left;
     color: #2B2B2B;
+    overflow: hidden;
 
     .grd {
       font-family: 'NeueHaasDisplay-me';
