--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1542,7 +1542,7 @@ section.horizontal .animation-wrap.to-left {
 
   .en-form-submit {
     margin: 0 0 0;
-    overflow: hidden;
+    overflow: visible;
     /* height: 100%; */
     text-align: left;
     margin-bottom: 20%;
@@ -1563,9 +1563,10 @@ section.horizontal .animation-wrap.to-left {
       text-transform: inherit;
       text-indent: inherit;
       text-decoration: none;
+      
 
       span {
-        background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+        background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
         -webkit-text-fill-color: transparent;
         -webkit-background-clip: text;
         background-clip: text;
@@ -1574,18 +1575,32 @@ section.horizontal .animation-wrap.to-left {
         animation: gradient 2s ease infinite;
         -webkit-animation-direction: alternate;
         animation-direction: alternate;
-
+        .arro {
+          img {
+            width: 10px;
+            margin-left: 7px;
+  
+          }
+        }
       }
 
     }
 
     .en-btn_send:after {
-      background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+      background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
       background-size: 100% 500%;
       -webkit-animation: gradient 2s ease infinite;
       animation: gradient 2s ease infinite;
       -webkit-animation-direction: alternate;
       animation-direction: alternate;
+    }
+  }
+  .en-btn_send:hover {
+    .arro {
+      img {
+        transform: rotate(-45deg);
+        transition: all 0.3s ease-in-out;
+      }
     }
   }
 }
