--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -716,7 +716,7 @@
     line-height: 1.4;
     font-synthesis: none;
     letter-spacing: 0;
-    font-family: 'Ageo-SemiBold';
+    font-family: 'Ageo';
 }
 
 .c-hm-us_title {
@@ -729,9 +729,9 @@
     margin-top: 0px;
     margin-bottom: 0px;
     font-family: 'NeueHaasDisplay-me';
-    font-size: 2.6vw;
+    font-size: 2.6em;
     line-height: 0.9;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.06em;
     text-transform: capitalize;
 }
 
@@ -3530,7 +3530,9 @@
             font-size: 1em;
         }
     }
-
+    .t-lead {
+        font-size: 2.4em;
+    }
     .about-us-section {
         padding: 1% 0 30px;
         margin-bottom: 110px;
@@ -3712,7 +3714,7 @@
     }
 
     .t-d3-fluid {
-        font-size: 7.8vw;
+        font-size: 7.8em;
     }
 
     .about-us-section {
