--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -811,15 +811,15 @@
             right: 0;
             top: 2.5vh;
             bottom: auto;
-            font-size: 1.1em;
+            font-size: 1.4em;
             line-height: 1.5;
             color: #ffffff;
             font-weight: normal;
             font-family: 'Ageo';
-            letter-spacing: 0.20em;
+            letter-spacing: 2px;
 
         }
-
+        
         .chapt-icon {
             position: absolute;
             display: block;
