--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -3358,12 +3358,12 @@ header {
     right: 0;
     top: 2.5vh;
     bottom: auto;
-    font-size: 1.1em;
+    font-size: 1.4em;
     line-height: 1.5;
     color: #ffffff;
     font-weight: normal;
     font-family: 'Ageo';
-    letter-spacing: 0.2em;
+    letter-spacing: 2px;
   }
   .container_hero_content .chapt-icon {
     position: absolute;
@@ -5218,7 +5218,7 @@ header {
   line-height: 1.4;
   font-synthesis: none;
   letter-spacing: 0;
-  font-family: 'Ageo-SemiBold';
+  font-family: 'Ageo';
 }
 .c-hm-us_title {
   max-width: 38vw;
@@ -5229,9 +5229,9 @@ header {
   margin-top: 0px;
   margin-bottom: 0px;
   font-family: 'NeueHaasDisplay-me';
-  font-size: 2.6vw;
+  font-size: 2.6em;
   line-height: 0.9;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.06em;
   text-transform: capitalize;
 }
 .t-d3-fluid.cta {
@@ -7754,6 +7754,9 @@ header {
   #about2 .about-p p {
     font-size: 1em;
   }
+  .t-lead {
+    font-size: 2.4em;
+  }
   .about-us-section {
     padding: 1% 0 30px;
     margin-bottom: 110px;
@@ -7885,7 +7888,7 @@ header {
     right: -9px;
   }
   .t-d3-fluid {
-    font-size: 7.8vw;
+    font-size: 7.8em;
   }
   .about-us-section .about-us-image {
     width: 100%;
