--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -2059,10 +2059,6 @@ header {
           animation-direction: alternate;
   background-size: 100% 200%;
 }
-.navItem:nth-child(2) .navItemLinkInner::after {
-  background-color: #FA8BFF;
-  background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
-}
 .navItemLink:hover .navItemLinkInner:after {
   display: block;
   color: #000000;
@@ -10885,6 +10881,305 @@ section.horizontal .animation-wrap.to-left {
 }
 #colori ul.is-inview li > div p {
   color: #fff;
+}
+.portfolio-showcase.carousel-showcase {
+  width: 100%;
+  height: 100vh;
+}
+.cas-bg-text {
+  font-size: 200px;
+  font-weight: 700;
+  letter-spacing: -0.07em;
+  position: fixed;
+  top: 10%;
+  left: 0;
+  white-space: nowrap;
+  opacity: 0.02;
+}
+.cas-headline {
+  position: absolute;
+  top: 50%;
+  left: 8.5%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  max-width: 80vw;
+  font-size: 60px;
+  font-weight: 700;
+  letter-spacing: -0.06em;
+  line-height: 75px;
+  padding-left: 5%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.carousel-showcase.dark .cas-titles .cs-title a,
+body.dark .cas-titles .cs-title a,
+.carousel-showcase.dark .cas-headline,
+body.dark .cas-headline {
+  color: #fff;
+}
+.cas-headline .cas-line {
+  overflow: hidden;
+  padding-right: 6px;
+}
+.cas-headline .cas-line span {
+  display: block;
+}
+.cas-project-wrapper {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+}
+.cas-project {
+  display: block;
+  margin-right: 300px;
+  width: 50vw;
+  position: relative;
+  height: 50vh;
+}
+.cs-image {
+  width: 100%;
+  overflow: hidden;
+  height: 100%;
+}
+.showcase-video {
+  width: 100%;
+  height: 100%;
+}
+.cs-image img {
+  width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  height: 100%;
+}
+.plyr {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  direction: ltr;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: inherit;
+  font-family: var(--plyr-font-family, inherit);
+  font-variant-numeric: tabular-nums;
+  font-weight: 400;
+  font-weight: var(--plyr-font-weight-regular, 400);
+  line-height: 1.7;
+  line-height: var(--plyr-line-height, 1.7);
+  max-width: 100%;
+  min-width: 200px;
+  position: relative;
+  text-shadow: none;
+  -webkit-transition: -webkit-box-shadow 0.3s ease;
+  transition: -webkit-box-shadow 0.3s ease;
+  transition: box-shadow 0.3s ease;
+  transition: box-shadow 0.3s ease, -webkit-box-shadow 0.3s ease;
+  z-index: 0;
+}
+.plyr--full-ui {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.plyr--video {
+  background: #000;
+  background: var(--plyr-video-background, var(--plyr-video-background, #000));
+  overflow: hidden;
+}
+.portfolio-showcase .plyr {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+.cas-titles {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  height: 250px;
+  overflow: hidden;
+}
+.cas-titles .cas-titles-wrap {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  -webkit-transform: translateY(250px);
+  transform: translateY(250px);
+}
+.cas-titles .cs-title {
+  font-size: 150px;
+  font-weight: 700;
+  letter-spacing: -0.06em;
+  white-space: nowrap;
+  padding: 50px 0;
+}
+.cas-titles .cs-title {
+  font-size: 150px;
+  font-weight: 700;
+  letter-spacing: -0.06em;
+  white-space: nowrap;
+  padding: 50px 0;
+}
+.cas-titles .cs-title a {
+  text-decoration: none;
+  color: #191b1d;
+  display: block;
+  overflow: hidden;
+}
+.carousel-showcase.dark .cas-titles .cs-title a,
+body.dark .cas-titles .cs-title a,
+.carousel-showcase.dark .cas-headline,
+body.dark .cas-headline {
+  color: #fff;
+}
+.cas-progress {
+  display: block;
+  position: fixed;
+  bottom: 7.5%;
+  width: 50%;
+  height: 1px;
+  background: rgba(25, 27, 29, 0.2);
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+.carousel-showcase.dark .cas-progress,
+body.dark .cas-progress {
+  background: hsla(0, 0%, 100%, 0.2);
+}
+.cas-progress span {
+  position: absolute;
+  left: 0;
+  background: #191b1d;
+  height: 100%;
+  width: 0%;
+}
+.carousel-showcase.dark .cas-progressspan,
+body.dark .cas-progress span {
+  background: #fff;
+}
+.showcase-footer {
+  position: absolute;
+  bottom: 7.5%;
+  width: 83%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  pointer-events: none;
+}
+.showcase-footer-left,
+.showcase-footer-right {
+  display: block;
+  float: left;
+  width: 50%;
+  height: 100%;
+  pointer-events: all;
+}
+.scroll-notice {
+  position: relative;
+  display: inline-block;
+  width: auto;
+  cursor: pointer;
+}
+.scroll-notice span:last-child {
+  display: block;
+  position: relative;
+  width: auto;
+  white-space: nowrap;
+  font-size: 12px;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.6);
+  -webkit-writing-mode: vertical-lr;
+      -ms-writing-mode: tb-lr;
+          writing-mode: vertical-lr;
+}
+.showcase-footer-right {
+  text-align: right;
+  float: right;
+  pointer-events: all;
+}
+.a-plus-button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+}
+.a-plus-button::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background: #ffffff;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.a-plus-button::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 1px;
+  height: 50px;
+  background: #191b1d;
+  left: 50%;
+  top: 0;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  -webkit-transition: -webkit-transform 0.6s ease;
+  transition: -webkit-transform 0.6s ease;
+  transition: transform 0.6s ease;
+  transition: transform 0.6s ease, -webkit-transform 0.6s ease;
+}
+.a-plus-button a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  white-space: nowrap;
+  color: #ffffff;
+  font-size: 12px;
+  overflow: hidden;
+  font-weight: 600;
+}
+.a-plus-button a > span {
+  display: inline-block;
+  position: absolute;
+  top: 30%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  left: 50%;
+  overflow: hidden;
+}
+.a-plus-button a > span > span {
+  display: block;
+  -webkit-transform: translateY(100%);
+  transform: translateY(100%);
+  -webkit-transition: -webkit-transform 0.3s ease 0.3s;
+  transition: -webkit-transform 0.3s ease 0.3s;
+  transition: transform 0.3s ease 0.3s;
+  transition: transform 0.3s ease 0.3s, -webkit-transform 0.3s ease 0.3s;
 }
 @media screen and (max-width: 1280px) {
   #work-sction .hd-rvl {
