--- a/assets/resources/styles/less/modules/_header.less
+++ b/assets/resources/styles/less/modules/_header.less
@@ -441,8 +441,8 @@ header {
 }
 
 .navItem:nth-child(2) .navItemLinkInner::after {
-	background-color: #FA8BFF;
-	background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
+	// background-color: #FA8BFF;
+	// background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
 }
 
 .navItemLink:hover .navItemLinkInner:after {
