--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -10903,13 +10903,14 @@ section.horizontal .animation-wrap.to-left {
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
   max-width: 80vw;
-  font-size: 60px;
+  font-size: 54px;
   font-weight: 700;
-  letter-spacing: -0.06em;
+  letter-spacing: 0;
   line-height: 75px;
   padding-left: 5%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  font-family: 'NeueHaasDisplay-me';
 }
 .carousel-showcase.dark .cas-titles .cs-title a,
 body.dark .cas-titles .cs-title a,
@@ -10964,51 +10965,6 @@ body.dark .cas-headline {
   object-fit: cover;
   height: 100%;
 }
-.plyr {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  direction: ltr;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  font-family: inherit;
-  font-family: var(--plyr-font-family, inherit);
-  font-variant-numeric: tabular-nums;
-  font-weight: 400;
-  font-weight: var(--plyr-font-weight-regular, 400);
-  line-height: 1.7;
-  line-height: var(--plyr-line-height, 1.7);
-  max-width: 100%;
-  min-width: 200px;
-  position: relative;
-  text-shadow: none;
-  -webkit-transition: -webkit-box-shadow 0.3s ease;
-  transition: -webkit-box-shadow 0.3s ease;
-  transition: box-shadow 0.3s ease;
-  transition: box-shadow 0.3s ease, -webkit-box-shadow 0.3s ease;
-  z-index: 0;
-}
-.plyr--full-ui {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-.plyr--video {
-  background: #000;
-  background: var(--plyr-video-background, var(--plyr-video-background, #000));
-  overflow: hidden;
-}
-.portfolio-showcase .plyr {
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-}
 .cas-titles {
   position: fixed;
   top: 50%;
@@ -11027,18 +10983,12 @@ body.dark .cas-headline {
   transform: translateY(250px);
 }
 .cas-titles .cs-title {
-  font-size: 150px;
+  font-size: 110px;
   font-weight: 700;
-  letter-spacing: -0.06em;
+  letter-spacing: 0em;
   white-space: nowrap;
-  padding: 50px 0;
-}
-.cas-titles .cs-title {
-  font-size: 150px;
-  font-weight: 700;
-  letter-spacing: -0.06em;
-  white-space: nowrap;
-  padding: 50px 0;
+  padding: 40px 0;
+  font-family: 'NeueHaasDisplay-me';
 }
 .cas-titles .cs-title a {
   text-decoration: none;
