--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -449,16 +449,20 @@
     width: 100%;
     height: 100vh;
 }
+
 .cas-bg-text {
     font-size: 200px;
     font-weight: 700;
-    letter-spacing: -.07em;
+    letter-spacing: 0;
     position: fixed;
     top: 10%;
     left: 0;
     white-space: nowrap;
-    opacity: .02;
+    opacity: 0.07;
+    color: #fff;
+    font-family: 'NeueHaasDisplay-me';
 }
+
 .cas-headline {
     position: absolute;
     top: 50%;
@@ -475,16 +479,23 @@
     box-sizing: border-box;
     font-family: 'NeueHaasDisplay-me';
 }
-.carousel-showcase.dark .cas-titles .cs-title a, body.dark .cas-titles .cs-title a, .carousel-showcase.dark .cas-headline, body.dark .cas-headline {
+
+.carousel-showcase.dark .cas-titles .cs-title a,
+body.dark .cas-titles .cs-title a,
+.carousel-showcase.dark .cas-headline,
+body.dark .cas-headline {
     color: #fff;
 }
+
 .cas-headline .cas-line {
     overflow: hidden;
     padding-right: 6px;
 }
+
 .cas-headline .cas-line span {
     display: block;
 }
+
 .cas-project-wrapper {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
@@ -504,6 +515,7 @@
     position: absolute;
     top: 50%;
 }
+
 .cas-project {
     display: block;
     margin-right: 300px;
@@ -511,15 +523,18 @@
     position: relative;
     height: 50vh;
 }
+
 .cs-image {
     width: 100%;
     overflow: hidden;
     height: 100%;
 }
+
 .showcase-video {
     width: 100%;
     height: 100%;
 }
+
 .cs-image img {
     width: 100%;
     -o-object-fit: cover;
@@ -531,13 +546,14 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     text-align: center;
     height: 250px;
     overflow: hidden;
 }
+
 .cas-titles .cas-titles-wrap {
     display: block;
     position: relative;
@@ -546,6 +562,7 @@
     -ms-transform: translateY(250px);
     transform: translateY(250px);
 }
+
 .cas-titles .cs-title {
     font-size: 110px;
     font-weight: 700;
@@ -562,24 +579,31 @@
     overflow: hidden;
 }
 
-.carousel-showcase.dark .cas-titles .cs-title a, body.dark .cas-titles .cs-title a, .carousel-showcase.dark .cas-headline, body.dark .cas-headline {
+.carousel-showcase.dark .cas-titles .cs-title a,
+body.dark .cas-titles .cs-title a,
+.carousel-showcase.dark .cas-headline,
+body.dark .cas-headline {
     color: #fff;
 }
+
 .cas-progress {
     display: block;
     position: fixed;
     bottom: 7.5%;
     width: 50%;
     height: 1px;
-    background: rgba(25,27,29,.2);
+    background: rgba(25, 27, 29, .2);
     left: 50%;
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
 }
-.carousel-showcase.dark .cas-progress, body.dark .cas-progress {
-    background: hsla(0,0%,100%,.2);
+
+.carousel-showcase.dark .cas-progress,
+body.dark .cas-progress {
+    background: hsla(0, 0%, 100%, .2);
 }
+
 .cas-progress span {
     position: absolute;
     left: 0;
@@ -587,7 +611,9 @@
     height: 100%;
     width: 0%;
 }
-.carousel-showcase.dark .cas-progressspan, body.dark .cas-progress span {
+
+.carousel-showcase.dark .cas-progressspan,
+body.dark .cas-progress span {
     background: #fff;
 }
 
@@ -601,19 +627,23 @@
     transform: translateX(-50%);
     pointer-events: none;
 }
-.showcase-footer-left, .showcase-footer-right {
+
+.showcase-footer-left,
+.showcase-footer-right {
     display: block;
     float: left;
     width: 50%;
     height: 100%;
     pointer-events: all;
 }
+
 .scroll-notice {
     position: relative;
     display: inline-block;
     width: auto;
     cursor: pointer;
 }
+
 .scroll-notice span:last-child {
     display: block;
     position: relative;
@@ -652,6 +682,7 @@
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
+
 .a-plus-button::after {
     content: "";
     display: block;
@@ -668,8 +699,9 @@
     transition: -webkit-transform .6s ease;
     -o-transition: transform .6s ease;
     transition: transform .6s ease;
-    transition: transform .6s ease,-webkit-transform .6s ease;
+    transition: transform .6s ease, -webkit-transform .6s ease;
 }
+
 .a-plus-button a {
     display: block;
     width: 100%;
@@ -680,13 +712,14 @@
     overflow: hidden;
     font-weight: 600;
 }
+
 .a-plus-button a>span {
     display: inline-block;
     position: absolute;
     top: 30%;
-    -webkit-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     left: 50%;
     overflow: hidden;
 }
@@ -700,141 +733,316 @@
     transition: -webkit-transform .3s ease .3s;
     -o-transition: transform .3s ease .3s;
     transition: transform .3s ease .3s;
-    transition: transform .3s ease .3s,-webkit-transform .3s ease .3s;
+    transition: transform .3s ease .3s, -webkit-transform .3s ease .3s;
 }
 
 
 .alioth-page-loader {
-	position: fixed;
-	width: 100vw;
-	height: 100vh;
-	top: 0;
-	left: 0;
-	z-index: 888
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 888
 }
 
 .alioth-page-loader .apl-wrapper {
-	position: fixed;
-	bottom: 10%;
-	left: 8.5%;
-	width: 100%;
-	height: 200px;
-	z-index: 9999999
+    position: fixed;
+    bottom: 10%;
+    left: 8.5%;
+    width: 100%;
+    height: 200px;
+    z-index: 9999999
 }
 
 span.apl-background {
-	position: fixed;
-	top: 0;
-	left: 0;
-	background: #191b1d;
-	width: 100%;
-	height: 100%;
-	z-index: -15
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #191b1d;
+    width: 100%;
+    height: 100%;
+    z-index: -15
 }
 
 .alioth-page-loader.light span.apl-background {
-	background: #ebebeb
+    background: #ebebeb
 }
 
 .apl-count {
-	position: fixed;
-	bottom: 0;
-	left: -4%
+    position: fixed;
+    bottom: 0;
+    left: -4%
 }
 
 .apl-loading>span {
-	display: inline-block;
-	overflow: hidden
+    display: inline-block;
+    overflow: hidden
 }
 
 .apl-load-word {
-	-webkit-transform: translateY(100%);
-	-ms-transform: translateY(100%);
-	transform: translateY(100%)
+    -webkit-transform: translateY(100%);
+    -ms-transform: translateY(100%);
+    transform: translateY(100%)
 }
 
 .apl-text {
-	font-size: 65px;
-	line-height: 75px;
-	font-weight: 700;
-	letter-spacing: -.06em;
-	white-space: nowrap;
-	color: #191b1d;
-	z-index: 3;
-	visibility: hidden;
-	display: block;
-	position: fixed;
-	top: 50%;
-	left: 0;
-	-webkit-transform: translateY(-50%) translateX(500px);
-	-ms-transform: translateY(-50%) translateX(500px);
-	transform: translateY(-50%) translateX(500px)
+    font-size: 65px;
+    line-height: 75px;
+    font-weight: 700;
+    letter-spacing: -.06em;
+    white-space: nowrap;
+    color: #191b1d;
+    z-index: 3;
+    visibility: hidden;
+    display: block;
+    position: fixed;
+    top: 50%;
+    left: 0;
+    -webkit-transform: translateY(-50%) translateX(500px);
+    -ms-transform: translateY(-50%) translateX(500px);
+    transform: translateY(-50%) translateX(500px)
 }
 
 .apl-count {
-	position: absolute;
-	font-size: 250px;
-	color: #fff;
-	font-weight: 700;
-	text-align: center
+    position: absolute;
+    font-size: 250px;
+    color: #fff;
+    font-weight: 700;
+    text-align: center
 }
 
 .alioth-page-loader.light .apl-count {
-	color: rgba(25, 27, 29, .05)
+    color: rgba(25, 27, 29, .05)
 }
 
 .apl-count .apl-num {
-	display: block;
-	overflow: hidden;
-	float: left;
-	height: 250px
+    display: block;
+    overflow: hidden;
+    float: left;
+    height: 250px
 }
 
 .apl-num-wrapper {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column
 }
 
 .apl-num-1 .apl-num-wrapper {
-	-webkit-transform: translateY(10%);
-	-ms-transform: translateY(10%);
-	transform: translateY(10%);
-	text-align: right
+    -webkit-transform: translateY(10%);
+    -ms-transform: translateY(10%);
+    transform: translateY(10%);
+    text-align: right
 }
 
 .apl-num-2 .apl-num-wrapper {
-	-webkit-transform: translateY(5%);
-	-ms-transform: translateY(5%);
-	transform: translateY(5%);
-	text-align: left
+    -webkit-transform: translateY(5%);
+    -ms-transform: translateY(5%);
+    transform: translateY(5%);
+    text-align: left
 }
 
 .apl-num-3 .apl-num-wrapper {
-	-webkit-transform: translateY(100%);
-	-ms-transform: translateY(100%);
-	transform: translateY(100%)
+    -webkit-transform: translateY(100%);
+    -ms-transform: translateY(100%);
+    transform: translateY(100%)
 }
 
 .apl-num-3 span {
-	display: block
+    display: block
 }
 
 .apl-num.apl-num-3 {
-	margin-left: -25px
+    margin-left: -25px
 }
 
 .alioth-page-loader.dark .apl-text {
-	color: #fff
+    color: #fff
 }
 
 .alioth-page-loader.dark .apl-count {
-	color: hsla(0, 0%, 100%, .05)
+    color: hsla(0, 0%, 100%, .05)
 }
+
+.c-col-9 {
+    width: 75%;
+}
+
+.c-col-1,
+.c-col-2,
+.c-col-3,
+.c-col-4,
+.c-col-5,
+.c-col-6,
+.c-col-7,
+.c-col-8,
+.c-col-9,
+.c-col-10,
+.c-col-11,
+.c-col-12 {
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: 30px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.c-col-8 {
+    width: 66.666666%;
+}
+
+.c-col-4 {
+    width: 33.333333%;
+}
+
+.a-number-counter {
+    position: relative;
+    display: block;
+}
+
+.ac-number {
+    font-size: 100px;
+    font-weight: 700;
+    letter-spacing: -0.5px;
+    height:
+        160px;
+    position: relative;
+    display: inline-block;
+    padding-bottom:
+        20px;
+    overflow-y: hidden;
+    padding-right:
+        5px;
+    font-family: 'NeueHaasDisplay-me';
+}
+
+.numbers-wrapper {
+    -webkit-transform: translateY(28%);
+    -ms-transform: translateY(28%);
+    transform: translateY(28%);
+}
+
+.ac-number span {
+    display: block;
+}
+
+.count_anim_end .ac-number span:last-child::after {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+}
+
+.ac-number span:last-child::after {
+    content: attr(data-sign);
+    display: inline-block;
+    margin-left: 5px;
+    -webkit-transform: translateY(100%);
+    -ms-transform: translateY(100%);
+    transform: translateY(100%);
+    -webkit-transition: all .6s ease;
+    -o-transition: all .6s ease;
+    transition: all .6s ease;
+}
+
+span.ac-sign {
+    font-size: 100px;
+    font-weight: 700;
+    letter-spacing: -7.5px;
+    display: inline-block;
+    padding-bottom: 20px;
+    vertical-align: top;
+    overflow: hidden;
+}
+
+.ac-title {
+    display: block;
+    font-size: 19px;
+    margin-top:
+        -21px;
+    overflow: hidden;
+    font-family: 'Ageo-SemiBold';
+    color: rgba(25, 27, 29, 0.6);
+}
+
+.a-number-counter.count_inview .ac-title::before {
+    width: 80%;
+}
+
+.ac-title::before {
+    content: "";
+    display: block;
+    background: hsla(0, 0%, 100%, 0.2);
+    width: 0%;
+    height:
+        1px;
+    margin-bottom:
+        11px;
+    -webkit-transition: all 0.7s ease;
+    transition: all 0.7s ease;
+}
+
+.a-empty-space {
+    display: block;
+    width: 100%;
+    float: revert;
+    clear: both;
+}
+
+.text-wrapper {
+    display: block;
+    float: left;
+    width: 100%;
+}
+
+.single-image {
+    width: 100%;
+    display: block;
+    position: relative;
+    float: left;
+}
+
+.single-image img {
+    width: 100%;
+}
+
+.wrappers {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    // margin-bottom: 100px;
+}
+
+.wrapper-full {
+    width: 100%;
+    margin-bottom: 100px;
+}
+
+.section-p {
+    .wrappers {
+        max-width: 1500px;
+        clear: both;
+    }
+
+    .has-anim {
+        display: block;
+        width: 100%;
+    }
+
+    h3 {
+        font-size: 30px;
+        line-height: 40px;
+        margin-left: -1px;
+        font-family: 'Ageo-SemiBold';
+        letter-spacing: 0em;
+    }
+}
+
 @media screen and (max-width:1280px) {
     #work-sction .hd-rvl {
         font-size: 20px;
