--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -1086,6 +1086,21 @@ span.ac-sign {
     }
 
 
+    .dd {
+        display: none;
+    }
+
+    .top-p {
+        font-size: 30px;
+        line-height: 41px;
+        padding-left: 0;
+        width: 100%;
+        margin-top: 90px;
+        padding: 0px 30px;
+        color: #fff;
+        letter-spacing: 1px;
+        font-family: 'NeueHaasDisplay-me';
+    }
 }
 
 @media screen and (max-width:1280px) {
