--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -11412,6 +11412,20 @@ span.ac-sign {
     width: 100%;
     margin-bottom: 35px;
   }
+  .dd {
+    display: none;
+  }
+  .top-p {
+    font-size: 30px;
+    line-height: 41px;
+    padding-left: 0;
+    width: 100%;
+    margin-top: 90px;
+    padding: 0px 30px;
+    color: #fff;
+    letter-spacing: 1px;
+    font-family: 'NeueHaasDisplay-me';
+  }
 }
 @media screen and (max-width: 1280px) {
   #work-sction .hd-rvl {
