--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -514,6 +514,12 @@
                 margin-top: 0;
                 line-height: 20px;
                 font-size: 110px;
+
+                span {
+                    display: inline-block;
+                }
+
+
             }
         }
     }
@@ -733,10 +739,11 @@ ul.aw-cats {
         width: 100% !important;
         padding-left: 0 !important;
         display: flex;
-    align-items: center;
-    img{
-        margin-left: 20px;
-    }
+        align-items: center;
+
+        img {
+            margin-left: 20px;
+        }
     }
 
     .pr-list {
@@ -1035,7 +1042,7 @@ ul.aw-cats {
             z-index: 4;
             margin-top:
                 30px;
-                
+
         }
 
         .p-prj-caption-name {
