--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -213,112 +213,112 @@ ul {
   font-style: italic;
   font-weight: 100;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVnJx26TKEr37c9aBBx_nwM.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVnJx26TKEr37c9aBBx_nwM.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: italic;
   font-weight: 200;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVkJx26TKEr37c9aBBxUl0s7g.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVkJx26TKEr37c9aBBxUl0s7g.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVkJx26TKEr37c9aBBxNl4s7g.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVkJx26TKEr37c9aBBxNl4s7g.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVhJx26TKEr37c9aBBJmg.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVhJx26TKEr37c9aBBJmg.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVkJx26TKEr37c9aBBxbl8s7g.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVkJx26TKEr37c9aBBxbl8s7g.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVkJx26TKEr37c9aBBxQlgs7g.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVkJx26TKEr37c9aBBxQlgs7g.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVkJx26TKEr37c9aBBxJlks7g.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVkJx26TKEr37c9aBBxJlks7g.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: italic;
   font-weight: 800;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVkJx26TKEr37c9aBBxOlos7g.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVkJx26TKEr37c9aBBxOlos7g.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVhJx26TKEr37c9YHZJmg.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVhJx26TKEr37c9YHZJmg.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVmJx26TKEr37c9YNpoulw.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVmJx26TKEr37c9YNpoulw.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVmJx26TKEr37c9YL5rulw.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVmJx26TKEr37c9YL5rulw.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVjJx26TKEr37c9WBI.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVjJx26TKEr37c9WBI.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVmJx26TKEr37c9YOZqulw.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVmJx26TKEr37c9YOZqulw.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVmJx26TKEr37c9YMptulw.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVmJx26TKEr37c9YMptulw.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVmJx26TKEr37c9YK5sulw.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVmJx26TKEr37c9YK5sulw.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Sarabun';
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/sarabun/v12/DtVmJx26TKEr37c9YLJvulw.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/sarabun/v13/DtVmJx26TKEr37c9YLJvulw.ttf) format('truetype');
 }
 @font-face {
   font-family: "Beatrice-Display-Light";
@@ -1428,18 +1428,18 @@ template {
   opacity: 0;
   -webkit-transform: scale(1.4);
           transform: scale(1.4);
-  -webkit-transition: opacity 1.2s cubic-bezier(0.215, 0.61, 0.355, 1), -webkit-transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
-  transition: opacity 1.2s cubic-bezier(0.215, 0.61, 0.355, 1), -webkit-transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
-  transition: opacity 1.2s cubic-bezier(0.215, 0.61, 0.355, 1), transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
-  transition: opacity 1.2s cubic-bezier(0.215, 0.61, 0.355, 1), transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1), -webkit-transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
+  -webkit-transition: opacity 1s cubic-bezier(0.215, 0.61, 0.355, 1), -webkit-transform 1s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transition: opacity 1s cubic-bezier(0.215, 0.61, 0.355, 1), -webkit-transform 1s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transition: opacity 1s cubic-bezier(0.215, 0.61, 0.355, 1), transform 1s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transition: opacity 1s cubic-bezier(0.215, 0.61, 0.355, 1), transform 1s cubic-bezier(0.215, 0.61, 0.355, 1), -webkit-transform 1s cubic-bezier(0.215, 0.61, 0.355, 1);
   width: 100%;
 }
 .o-image.is-inview img {
   opacity: 1;
   -webkit-transform: scale(1);
           transform: scale(1);
-  -webkit-transition-delay: 0.6s;
-          transition-delay: 0.6s;
+  -webkit-transition-delay: 0.4s;
+          transition-delay: 0.4s;
 }
 .c-speed-block_title.is-inview {
   opacity: 1;
@@ -14810,6 +14810,9 @@ ul.product-tags li a {
   margin-top: 0;
   line-height: 20px;
   font-size: 110px;
+}
+.page-header .wrapper-small .page-title h1.big-title span {
+  display: inline-block;
 }
 .aw-categories {
   display: block;
